go-backend-api-production-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: go-backend-api-production-svc
  namespace: production-go-backend
  labels:
    app: go-backend-api
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: go-backend-api
