go-backend-api-production-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-backend-api-production-ingress
  namespace: production-go-backend
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-methods: "GET, POST, PUT, DELETE, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-headers: "Content-Type, Authorization"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api-go.track360.net.in
    secretName: go-backend-api-production-tls
  rules:
  - host: api-go.track360.net.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: go-backend-api-production-svc
            port:
              number: 80
